--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="pt_BR">
   <head>
+    
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    
     <title>Moisés Gomes - DoWhile 2021</title>
 
     <link rel="stylesheet" href="style.css" />
